# ai-news-agent

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  environment.yml  feeds.json  pyproject.toml
.github/workflows/: ci.yml  digest.yml  publish-digest.yml
docs/: architecture.md  development.md
src/: collector.py  config.py  filterer.py  finalize.py  graph.py  item_types.py  main.py  publisher.py  ranking.py  renderer.py
tests/: test_collector.py  test_filterer.py  test_graph.py  test_main.py  test_publisher.py  test_renderer.py
tests/fixtures/: candidate_snapshot.json  decisions.json  no_key_digest.md
